ContentManagement/DotCms/helm1/db-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: db-dev
  name: db-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-dev
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/db_net: "true"
        io.kompose.service: db-dev
    spec:
      securityContext:
          fsGroup: 10000
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: MSSQL_DB_USER
              value: dotcms
            - name: MSSQL_PID
              value: Developer
            - name: MSSQL_SA_PASSWORD
              value: Test1234
            - name: MSSQL_USER
              value: sa
          image: mcr.microsoft.com/azure-sql-edge:latest
          name: db-dev
          ports:
            - containerPort: 1433
          resources: {}
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
          volumeMounts:
            - mountPath: /var/opt/mssql
              name: db-data-dev
      restartPolicy: Always
      volumes:
        - name: db-data-dev
          persistentVolumeClaim:
            claimName: db-data-dev
status: {}
