ContentManagement/DotCms/helm1/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/es_net: "true"
        io.kompose.service: elasticsearch
    spec:
      securityContext:
          fsGroup: 2000
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xmx1G
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.name
              value: elastic-cluster
            - name: discovery.type
              value: single-node
          image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
          name: elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9600
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: esdata
      restartPolicy: Always
      volumes:
        - name: esdata
          persistentVolumeClaim:
            claimName: esdata
status: {}
