ContentManagement/DotCms/helm1/dotcms-dev-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotcms-dev
spec:
  selector:
    app: dotcms-dev
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
