ContentManagement/DotCms/helm1/dotcms-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: dotcms-dev
  name: dotcms-dev
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: dotcms-dev
status:
  loadBalancer: {}
