ContentManagement/DotCms/helm1/es_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: esnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/es_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/es_net: "true"
